# Azan.v2

./: .env.example  .gitignore  Dockerfile  PULL_REQUEST_TEMPLATE.md  README.md  check_api.py  check_notice_detail.py  debug_deadlines.py  docker-compose.yml  postgresql_init.sql  test_langchain_models.py  test_models.py  test_slack.py
apps/rag/: README.md  pyproject.toml
apps/worker/: pyproject.toml
apps/worker/worker/: main.py
backend/: .env  .env.example  Dockerfile  README.md  alembic.ini  monitor_status.txt  pyproject.toml
backend/alembic/: README.md  env.py  script.py.mako
backend/alembic/versions/: .gitkeep  3b1e8f4d2a9c_drop_preview_from_notices.py  6f4a2d1c9e11_drop_notice_keywords_table.py  77f39e73372b_add_profile_fields_to_user.py  96f5d4e5304f_add_user_notice_reads_table.py  a1b2c3d4e5f6_add_notices_embedding.py  a1b2c3d4e5f6_add_risk_notification_schema.py  a2b3c4d5e6f7_add_title_eng_to_notices.py  a8b9c0d1e2f3_add_expo_push_token_to_users.py  b12d9c3e7a01_cleanup_runtime_indexes.py  b3c4d5e6f7a8_add_risk_msg_table.py  c0043515_merge_notice_and_profile_heads.py  c3f2a6d8b1c0_merge_categories_into_keywords.py  cf02b2a86bf8_fix_embedding_size.py  da16e1ed9856_add_eng_body_to_notices.py  e97b8af26a78_baseline_schema.py  f8a3c2e1d9b0_add_image_urls_to_notices.py
backend/app/: README.md  __init__.py  database.py  db_errors.py  main.py  models.py
backend/app/core/: config.py  logging.py
backend/app/models/: __init__.py  alert.py  information.py  keyword.py  notice.py  user.py
backend/app/routers/: README.md  __init__.py  (+4 more)
workers/: Dockerfile  README.md  daily_pipeline.py  manual_trans_notice_Eng.py  pyproject.toml
workers/alarm/: README.md
workers/crawler/: README.md  db.py  processor.py  slack_main.py  slack_scraper.py
workers/crawlers/: README.md  categorize.py  cleaner.py  config.py  csv_store.py  db_insert.py  deadline_extractor.py  dedupe.py  extractors.py  fill_eng_body.py  http_client.py  json_store.py  main.py  main_json.py  main_topik_json.py  models.py  parser_detail.py  parser_list.py  parser_topik_common.py  parser_topik_ibt.py  parser_topik_notice_detail.py  parser_topik_notice_list.py  parser_topik_pbt.py  parser_topik_schedule.py  parser_topik_speaking.py  selectors.py  translate.py
workers/crawlers_legacy/: __init__.py  parser_list.py
workers/rag/: README.md  benchmark_chatbot.py  test_chatbot.py
workers/risk_alarm/: requirements.txt
(+142 files in other folders)
