# 파일 기능: 패키지 메타데이터와 의존성을 정의하는 빌드 설정이다.
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "azan-api"
version = "0.1.0"
description = "Minimal FastAPI service for azan"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "alembic>=1.13,<2.0",
  "psycopg2-binary>=2.9,<3.0",
  "passlib[bcrypt]>=1.7,<2.0",
  "bcrypt<4.0",
  "PyJWT>=2.8,<3.0",
  "python-dotenv>=1.0,<2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
