[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "azan-worker"
version = "0.1.0"
description = "Minimal worker service for azan"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "sqlalchemy>=2.0,<3.0",
  "psycopg2-binary>=2.9,<3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["worker*"]
