[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "azan-worker"
version = "0.1.0"
description = "Minimal worker service for azan"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "sqlalchemy>=2.0,<3.0",
  "psycopg2-binary>=2.9,<3.0",
  "requests>=2.31,<3.0",
  "beautifulsoup4>=4.12,<5.0",
  "python-dotenv>=1.0,<2.0",
  "boto3>=1.34,<2.0",
  "slack-sdk>=3.0,<4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["worker*"]
